--- a/settings.json
+++ b/settings.json
@@ -3,18 +3,18 @@
 	"autobio": false,
 	"antihidetag": true,
 	"user_register": false,
-	"anti_delete" : false,
+	"anti_delete" : true,
 	"anticall": true,
 	"auto_welcome_msg": true,
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumber": "6283822759168",
+	"ownerNumberr": "6281822759168",
+	"cr": "@Andrii Street Moonshine",
+	"ownername": "Andrii Street Moonshine",
+	"botname":"ANDRIIxBOTZ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfcོ"
+	"fake": " 「  ANDRIIxBOTZ  」\nCreated By @Andrii Street Moonshine"
 }
