--- a/settings.json
+++ b/settings.json
@@ -9,12 +9,12 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6283822759168",
-	"ownerNumberr": "6283822759168",
-	"cr": "@Andrii Street Moonshine",
-	"ownername": "Andrii Street Moonshine",
-	"botname":"ANDRIIxBOTZ",
+	"ownerNumber": "16065179419",
+	"ownerNumberr": "16065179419",
+	"cr": "@Dapaa",
+	"ownername": "Dapaa Ganz",
+	"botname":"YANZ - BOTZ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  ANDRIIxBOTZ  」\nCreated By @Andrii Street Moonshine"
+	"fake": " 「  DAPAA BOTZ  」\nCreated By @DAPAA GANZ"
 }
